# ros2model

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.rosinstall.melodic  .travis.yml  CMakeLists.txt  LICENSE  README.md  install.sh  package.xml  pyproject.toml  setup.cfg  setup.py  test.sh
.github/workflows/: build.yaml  build_ros.yaml
resources/: cob_light.ros  robotino.rossystem  rosparam_example.yaml  test.rossystem  turtlesim.ros
ros2model/api/model_generator/: README.md  component_generator.py  message_generator.py  system_generator.py
ros2model/api/model_generator/templates/: component.ros2.j2
ros2model/api/runtime_parser/: README.md  rosmodel_runtime_parser.py  rossystem_runtime_parser.py
ros2model/command/: model.py
ros2model/core/: exceptions.py  utils.py
ros2model/core/generator/: file_generator.py  generator_core.py  utils.py
ros2model/core/metamodels/: metamodel_ros.py
ros2model/verb/: __init__.py  runtime_node.py  runtime_system.py
ros_model_parser/ros_metamodels/: ros_metamodel_core.py  rossystem_metamodel_core.py
ros_model_parser/ros_model_generator/: rosmodel_generator.py  rossystem_generator.py
ros_model_parser/ros_model_parser/: model_comparator.py  rosmodel_parser.py
scripts/: ros_model_generator_example.py  ros_parser_example.py  ros_system_model_generator_example.py  ros_system_model_generator_from_rosparamyaml_example.py
scripts/generators/: ros_model_generator_example.py  ros_system_model_generator_example.py  ros_system_model_generator_from_rosparamyaml_example.py
scripts/parsers/: ros_parser_example.py  ros_system_parser_example.py
src/metamodel/: metamodel_core.py
src/ros_metamodels/: ros_metamodel_core.py  rossystem_metamodel_core.py
src/ros_model_generator/: rosgraph_interface.py  rosmodel_generator.py  rossystem_generator.py
src/ros_model_parser/: model_comparator.py  rosmodel_parser.py  rossystem_parser.py
templates/: component.ros2.j2  message.ros.j2  rossystem.rossystem.j2  runtime_rossystem.rossystem.j2
test/outputs/: test.yaml  test_interfaces.ros  test_model.ros2  test_system.rossystem
test/resource/templates/: test_template.j2
test/unittest/: test_file_gen.py  test_generate_component.py  test_generate_interface.py  test_generate_system.py
tests/: model_generators_roslaunch_test.xml
