<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_model_parser</name>
  <version>0.0.1</version>
  <description>Parser for the ros-model DLSs</description>

  <author email="nadia.hammoudeh.garcia@ipa.fraunhofer.de">Nadia Hammoudeh Garcia</author>
  <author email="harshavardhan.deshpande@ipa.fraunhofer.de">Harsh Deshpande</author>
  <author email="ruichao.wu@ipa.fraunhofer.de">Ruichao Wu</author>

  <maintainer email="nadia.hammoudeh.garcia@ipa.fraunhofer.de">Nadia Hammoudeh Garcia</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <depend>rospy</depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>

  <test_depend condition="$ROS_VERSION == 1">roslaunch</test_depend>
  <test_depend condition="$ROS_VERSION == 2">launch</test_depend>
  <test_depend condition="$ROS_VERSION == 2">launch_ros</test_depend>
  <test_depend condition="$ROS_VERSION == 2">launch_testing</test_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_python</build_type>
  </export>

</package>
