<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2model</name>
  <version>0.0.0</version>
  <description>Parser for the ros-model DLSs</description>

  <author email="nadia.hammoudeh.garcia@ipa.fraunhofer.de">Nadia Hammoudeh Garcia</author>
  <author email="ruichao.wu@ipa.fraunhofer.de">Ruichao Wu</author>
  <author email="harshavardhan.deshpande@ipa.fraunhofer.de">Harsh Deshpande</author>

  <maintainer email="nadia.hammoudeh.garcia@ipa.fraunhofer.de">Nadia Hammoudeh Garcia</maintainer>
  <maintainer email="ruichao.wu@ipa.fraunhofer.de">Ruichao Wu</maintainer>

  <license>Apache 2.0</license>

  <exec_depend>python3-jinja2</exec_depend>
  <exec_depend>python3-pydantic</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-yaml</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
